--- a/foundry.toml
+++ b/foundry.toml
@@ -7,3 +7,10 @@ cache_path = 'cache_forge'
 via_ir = true
 solc = '0.8.26'
 optimizer_runs = 200
+evm_version = 'cancun'
+
+[rpc_endpoints]
+sepolia = "${SEPOLIA_RPC_URL}"
+
+[etherscan]
+sepolia = { key = "${ETHERSCAN_API_KEY}" }
