--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "bric-core",
+  "name": "bric-contract-starter",
   "version": "1.0.0",
   "description": "This repository contains the core smart contracts for the Bric Protocol.",
   "main": "index.js",
   "keywords": [
     "bric",
-    "core"
+    "contract",
+    "starter"
   ],
   "author": "bric-labs",
   "license": "MIT",
@@ -61,5 +62,5 @@
       "prettier --write"
     ]
   },
-  "packageManager": "yarn@3.6.4"
+  "packageManager": "yarn@4.9.2"
 }
