--- a/foundry.toml
+++ b/foundry.toml
@@ -2,7 +2,7 @@
 src = 'contracts'
 out = 'out'
 libs = ['node_modules', 'lib']
-test = 'test_foundry'
+test = 'test_solidity'
 cache_path = 'cache_forge'
 via_ir = true
 solc = '0.8.26'
