--- a/package.json
+++ b/package.json
@@ -22,14 +22,14 @@
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
-    "@nomicfoundation/hardhat-ethers": "3.1.0",
+    "@nomicfoundation/hardhat-ethers": "^3.1.0",
     "@nomicfoundation/hardhat-foundry": "^1.1.3",
-    "@nomicfoundation/hardhat-ignition": "0.15.13",
-    "@nomicfoundation/hardhat-ignition-ethers": "0.15.14",
-    "@nomicfoundation/hardhat-network-helpers": "1.1.0",
-    "@nomicfoundation/hardhat-toolbox": "6.1.0",
-    "@nomicfoundation/hardhat-verify": "2.1.1",
-    "@typechain/ethers-v6": "0.5.1",
+    "@nomicfoundation/hardhat-ignition": "^0.15.13",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.14",
+    "@nomicfoundation/hardhat-network-helpers": "^1.1.0",
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+    "@nomicfoundation/hardhat-verify": "^2.1.1",
+    "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.0.0",
     "@types/chai": "^4.2.0",
     "@types/mocha": ">=9.1.0",
@@ -38,7 +38,7 @@
     "ethers": "^6.4.0",
     "hardhat": "^2.26.3",
     "hardhat-contract-sizer": "^2.10.1",
-    "hardhat-gas-reporter": "2.3.0",
+    "hardhat-gas-reporter": "^2.3.0",
     "husky": "^9.1.7",
     "prettier": "3.6.2",
     "prettier-plugin-solidity": "2.1.0",
