feat: use Solidity tests with Hardhat 3

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
+# PrivateKey
 SEPOLIA_PRIVATE_KEY=""
+HOODI_PRIVATE_KEY=""
+
+# RPC_URL
 SEPOLIA_RPC_URL=""
+HOODI_RPC_URL=""
+
+# API_KEY
 ETHERSCAN_API_KEY=""
