--- a/foundry.toml
+++ b/foundry.toml
@@ -2,7 +2,7 @@
 src = 'contracts'
 out = 'out'
 libs = ['node_modules', 'lib']
-test = 'test_solidity'
+test = 'test_forge'
 cache_path = 'cache_forge'
 via_ir = true
 solc = '0.8.26'
@@ -10,11 +10,15 @@ optimizer_runs = 200
 evm_version = 'cancun'
 
 [rpc_endpoints]
+mainnet = "${MAINNET_RPC_URL}"
 sepolia = "${SEPOLIA_RPC_URL}"
+hoodi = "${HOODI_RPC_URL}"
 localhost = "http://127.0.0.1:8545"
 
 [etherscan]
+mainnet = { key = "${ETHERSCAN_API_KEY}" }
 sepolia = { key = "${ETHERSCAN_API_KEY}" }
+hoodi = { key = "${ETHERSCAN_API_KEY}" }
 
 [lint]
 lint_on_build = false
