--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "bric-contract-starter",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "type": "module",
   "description": "This repository contains the core smart contracts for the Bric Protocol.",
   "main": "index.js",
@@ -19,7 +19,8 @@
     "test:hh": "yarn hardhat test",
     "test:ff": "forge test -vvv",
     "node": "anvil --fork-url hoodi",
-    "format": "prettier -w contracts/**/* test_forge/**/* test/**/*"
+    "format": "prettier -w contracts/**/* test_forge/**/* test/**/*",
+    "release": "standard-version"
   },
   "devDependencies": {
     "@nomicfoundation/hardhat-ignition": "^3.0.5",
@@ -37,6 +38,7 @@
     "mocha": "^11.0.0",
     "prettier": "3.6.2",
     "prettier-plugin-solidity": "2.2.0",
+    "standard-version": "^9.5.0",
     "ts-node": ">=8.0.0",
     "typechain": "^8.3.2",
     "typescript": "5.9.3"
